--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,5 @@ tools/MapAtmosFixer/MapAtmosFixer/bin/*
 #extra map stuff
 /_maps/**/backup/
 /_maps/templates.dm
+config/config.txt
+config/whitelist.txt
