--- a/.github/workflows/ci_suite.yml
+++ b/.github/workflows/ci_suite.yml
@@ -129,68 +129,10 @@ jobs:
           name: libauxtools_tg
           path: auxtools_tg/target/${{env.target}}/release/libauxtools_tg.so
   
-  auxmos:
-    if: "!contains(github.event.head_commit.message, '[ci skip]')"
-    name: Build Auxmos
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          repository: 'Putnam3145/auxmos'
-          ref: '0ba476922ba15e0ea81e84f3ec9b003b8f6c3765'
-          path: 'auxmos'
-
-      - name: Cache cargo registry
-        uses: actions/cache@v2
-        with:
-          path: ~/.cargo/registry
-          key: auxmos-registry-${{ hashFiles('auxmos/Cargo.lock') }}
-
-      - name: Cache cargo index
-        uses: actions/cache@v2
-        with:
-          path: ~/.cargo/git
-          key: auxmos-index-${{ hashFiles('auxmos/Cargo.lock') }}
-
-      - name: Cache cargo build
-        id: auxmos-cache
-        uses: actions/cache@v2
-        with:
-          path: auxmos/target
-          key: auxmos-build-target-${{ hashFiles('auxmos/Cargo.lock') }}
-
-      - name: Install Ubuntu Deps
-        if: steps.auxmos-cache.outputs.cache-hit != 'true'
-        run: |
-          sudo dpkg --add-architecture i386
-          sudo apt-get update
-          sudo apt install build-essential g++-multilib libc6-i386 libstdc++6:i386
-
-      - uses: actions-rs/toolchain@v1
-        if: steps.auxmos-cache.outputs.cache-hit != 'true'
-        with:
-          profile: minimal
-          toolchain: ${{env.toolchain}}
-          target: ${{env.target}}
-          override: true
-
-      - name: Build
-        if: steps.auxmos-cache.outputs.cache-hit != 'true'
-        run: |
-          cargo build --manifest-path auxmos/Cargo.toml --target=${{env.target}} --release --verbose
-          ldd auxmos/target/${{env.target}}/release/libauxmos.so
-      
-      - name: Upload libauxmos artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: libauxmos
-          path: auxmos/target/${{env.target}}/release/libauxmos.so
-
   run_all_tests:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     name: Integration Tests
-    needs: [auxtools_tg, auxmos]
+    needs: [auxtools_tg]
     runs-on: ubuntu-20.04
     services:
       mysql:
