--- a/.github/workflows/ci_suite.yml
+++ b/.github/workflows/ci_suite.yml
@@ -80,7 +80,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: 'Putnam3145/auxmos'
-          ref: '0ba476922ba15e0ea81e84f3ec9b003b8f6c3765'
+          ref: 'v0.2.8'
           path: 'auxmos'
 
       - name: Cache cargo registry
