--- a/.github/workflows/ci_suite.yml
+++ b/.github/workflows/ci_suite.yml
@@ -80,7 +80,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: 'Putnam3145/auxmos'
-          ref: 'v0.2.8'
+          ref: 'fe6be06610fe366d01edf5b66e6ee602323050cf'
           path: 'auxmos'
 
       - name: Cache cargo registry
@@ -120,7 +120,7 @@ jobs:
       - name: Build
         if: steps.auxmos-cache.outputs.cache-hit != 'true'
         run: |
-          cargo build --manifest-path auxmos/Cargo.toml --target=${{env.target}} --release --verbose
+          cargo rustc --manifest-path auxmos/Cargo.toml --target=${{env.target}} --release --verbose --features "all_reaction_hooks auxcleanup_gas_deletion katmos"
           ldd auxmos/target/${{env.target}}/release/libauxmos.so
       
       - name: Upload libauxmos artifact
