--- a/.github/workflows/ci_suite.yml
+++ b/.github/workflows/ci_suite.yml
@@ -29,7 +29,6 @@ jobs:
         run: |
           pip3 install setuptools
           bash tools/ci/install_node.sh
-          bash tools/ci/install_auxmos.sh
           bash tools/ci/install_spaceman_dmm.sh dreamchecker
           tools/bootstrap/python -c ''
 
@@ -75,7 +74,6 @@ jobs:
   run_all_tests:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     name: Integration Tests
-    needs: [auxmos]
     runs-on: ubuntu-20.04
     services:
       mysql:
@@ -116,10 +114,9 @@ jobs:
           sudo apt install libssl1.1:i386
           bash tools/ci/install_rust_g.sh
 
-      - name: Download libauxmos library
-        uses: actions/download-artifact@v2
-        with:
-          name: libauxmos
+      - name: Install auxmos
+        run: |
+          bash tools/ci/install_auxmos.sh
 
       - name: Compile and run tests
         run: |
