--- a/.github/workflows/ci_suite.yml
+++ b/.github/workflows/ci_suite.yml
@@ -80,6 +80,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: 'tgstation/rust-g'
+          ref: '1.0.0'
           path: 'rustg'
 
       - name: Cache cargo registry
