--- a/.github/workflows/ci_suite.yml
+++ b/.github/workflows/ci_suite.yml
@@ -71,64 +71,6 @@ jobs:
           tgui/bin/tgui --build
           bash tools/ci/dm.sh -DCIBUILDING -DCITESTING -DALL_MAPS tgstation.dme
 
-  rust_g:
-    if: "!contains(github.event.head_commit.message, '[ci skip]')"
-    name: Build RustG
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          repository: 'tgstation/rust-g'
-          ref: '1.0.0'
-          path: 'rustg'
-
-      - name: Cache cargo registry
-        uses: actions/cache@v2
-        with:
-          path: ~/.cargo/registry
-          key: rustg-registry-${{ hashFiles('rustg/Cargo.lock') }}
-
-      - name: Cache cargo index
-        uses: actions/cache@v2
-        with:
-          path: ~/.cargo/git
-          key: rustg-index-${{ hashFiles('rustg/Cargo.lock') }}
-
-      - name: Cache cargo build
-        id: rustg-cache
-        uses: actions/cache@v2
-        with:
-          path: rustg/target
-          key: rustg-build-target-${{ hashFiles('rustg/Cargo.lock') }}
-
-      - name: Install Ubuntu Deps
-        if: steps.rustg-cache.outputs.cache-hit != 'true'
-        run: |
-          sudo dpkg --add-architecture i386
-          sudo apt-get update
-          sudo apt install build-essential g++-multilib libc6-i386 libstdc++6:i386 libssl-dev:i386 libz-dev:i386
-
-      - uses: actions-rs/toolchain@v1
-        if: steps.rustg-cache.outputs.cache-hit != 'true'
-        with:
-          profile: minimal
-          toolchain: ${{env.toolchain}}
-          target: ${{env.target}}
-          override: true
-
-      - name: Build
-        if: steps.rustg-cache.outputs.cache-hit != 'true'
-        run: |
-          cargo rustc --manifest-path rustg/Cargo.toml --target=${{env.target}} --release --verbose --all-features
-          ldd rustg/target/${{env.target}}/release/librust_g.so
-      
-      - name: Upload librust_g artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: librust_g
-          path: rustg/target/${{env.target}}/release/librust_g.so
-
   auxmos:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     name: Build Auxmos
@@ -238,6 +180,7 @@ jobs:
       - name: Compile and run tests
         run: |
           bash tools/ci/install_byond.sh
+          bash tools/ci/install_rust_g.sh
           source $HOME/BYOND/byond/bin/byondsetup
           tgui/bin/tgui --build
           bash tools/ci/dm.sh -DCIBUILDING tgstation.dme
