--- a/.github/workflows/ci_suite.yml
+++ b/.github/workflows/ci_suite.yml
@@ -132,7 +132,7 @@ jobs:
   run_all_tests:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     name: Integration Tests
-    needs: [auxmos, rust_g]
+    needs: [auxmos]
     runs-on: ubuntu-20.04
     services:
       mysql:
